# py-blkid

./: Makefile.in  blkid.pxd  config.py.in  configure  configure.ac  libblkid.pyx  setup.py
debian/: changelog  clean  control  copyright  rules
debian/source/: options
